--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,16 @@
 /node_modules
 /.pnp
 .pnp.js
+.env
 
 # testing
 /coverage
 
 # production
 /build
+.firebaserc
+firebase.json
+.firebase
 
 # misc
 .DS_Store
@@ -21,3 +25,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+package-lock.json
+
+test.js
