--- a/backend/package.json
+++ b/backend/package.json
@@ -28,9 +28,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
-    "instafeed.js": "^1.4.1",
     "nodemon": "^2.0.6",
-    "request": "^2.88.0",
-    "simple-oauth2": "^4.1.0"
+    "request": "^2.88.0"
   }
 }
